--- a/StudentRegistrationAPI/Resources/Message.resx
+++ b/StudentRegistrationAPI/Resources/Message.resx
@@ -126,6 +126,12 @@
   <data name="M002" xml:space="preserve">
     <value>Email already exist</value>
   </data>
+  <data name="M003" xml:space="preserve">
+    <value>Username or Email doesn't exist</value>
+  </data>
+  <data name="M004" xml:space="preserve">
+    <value>Incorrect password</value>
+  </data>
   <data name="M008" xml:space="preserve">
     <value>is required.</value>
   </data>
