--- a/StudentRegistrationAPI/Resources/SqlResources.resx
+++ b/StudentRegistrationAPI/Resources/SqlResources.resx
@@ -140,6 +140,29 @@
   <data name="InsertLogin" xml:space="preserve">
     <value>INSERT INTO TBL_LOGIN (USERID, SESSIONID, DYNAMICKEY, SESSIONEXPIREDATE, LOGINDATE) VALUES (@USERID, @SESSIONID, @DYNAMICKEY, @SESSIONEXPIREDATE, @LOGINDATE);</value>
   </data>
+  <data name="InsertStudent" xml:space="preserve">
+    <value>INSERT INTO TBL_STUDENT
+(STUDENTNO,NAME,FATHERNAME,NRC,ADDRESS,PHONE,EMAIL,GENDER,DOB,UNIVERSITYID,MAJORID,ACADEMICYEARID,ISDELETE,CREATEDDATE,CREATEDUSERID) 
+VALUES (@STUDENTNO,@NAME,@FATHERNAME,@NRC,@ADDRESS,@PHONE,@EMAIL,@GENDER,@DOB,@UNIVERSITYID,@MAJORID,@ACADEMICYEARID,@ISDELETE,@CREATEDDATE,@CREATEDUSERID);</value>
+  </data>
+  <data name="SelectAcademicYearById" xml:space="preserve">
+    <value>SELECT * FROM [TBL_ACADEMICYEAR] WHERE ID = @ID AND ISDELETE = 0;</value>
+  </data>
+  <data name="SelectAllStudent" xml:space="preserve">
+    <value>SELECT * FROM TBL_STUDENT WHERE ISDELETE = 0;</value>
+  </data>
+  <data name="SelectMajorById" xml:space="preserve">
+    <value>SELECT * FROM [TBL_MAJOR] WHERE ID = @ID AND ISDELETE = 0;</value>
+  </data>
+  <data name="SelectStudnetByNRC" xml:space="preserve">
+    <value>SELECT * FROM TBL_STUDENT WHERE NRC = @NRC;</value>
+  </data>
+  <data name="SelectStudnetByStudentNo" xml:space="preserve">
+    <value>SELECT * FROM TBL_STUDENT WHERE STUDENTNO = @StudentNo;</value>
+  </data>
+  <data name="SelectUniversityById" xml:space="preserve">
+    <value>SELECT * FROM [TBL_UNIVERSITY] WHERE ID = @ID AND ISDELETE = 0;</value>
+  </data>
   <data name="User_UpdateKeyAndStatus" xml:space="preserve">
     <value>UPDATE TBL_USER SET DYNAMICKEY = @DYNAMICKEY, ISLOGIN = @ISLOGIN WHERE USERID = @USERID;</value>
   </data>
