--- a/StudentRegistrationAPI/Resources/SqlResources.resx
+++ b/StudentRegistrationAPI/Resources/SqlResources.resx
@@ -138,10 +138,10 @@
            ,@CREATEDDATE)</value>
   </data>
   <data name="DeleteStudent" xml:space="preserve">
-    <value>UPDATE TBL_STUDENT SET ISDELETE = 1, UPDATEDUSERID = @UPDATEDUSERID, UPDATEDDATE = @UPDATEDDATE WHERE ID = @ID;</value>
+    <value>UPDATE TBL_STUDENT SET ISDELETE = 1, UPDATEDUSERID = @UPDATEDUSERID, UPDATEDATE = @UPDATEDDATE WHERE ID = @ID;</value>
   </data>
   <data name="InsertLogin" xml:space="preserve">
-    <value>INSERT INTO TBL_LOGIN (USERID, SESSIONID, DYNAMICKEY, SESSIONEXPIREDATE, LOGINDATE) VALUES (@USERID, @SESSIONID, @DYNAMICKEY, @SESSIONEXPIREDATE, @LOGINDATE);</value>
+    <value>INSERT INTO TBL_LOGIN (USERID, SESSIONID, DYNAMICKEY, SESSIONEXPIRDATE, LOGINDATE) VALUES (@USERID, @SESSIONID, @DYNAMICKEY, @SESSIONEXPIREDATE, @LOGINDATE);</value>
   </data>
   <data name="InsertStudent" xml:space="preserve">
     <value>INSERT INTO TBL_STUDENT
@@ -151,11 +151,11 @@ VALUES (@STUDENTNO,@NAME,@FATHERNAME,@NRC,@ADDRESS,@PHONE,@EMAIL,@GENDER,@DOB,@U
   <data name="SelectAcademicYearById" xml:space="preserve">
     <value>SELECT * FROM [TBL_ACADEMICYEAR] WHERE ID = @ID AND ISDELETE = 0;</value>
   </data>
-  <data name="SelectAllAcademicyear" xml:space="preserve">
-    <value>SELECT * FROM TBL_ACADEMICYEAR WHERE ISDELETE = 0;</value>
+  <data name="SelectAllAcademicyearByMajorId" xml:space="preserve">
+    <value>SELECT * FROM TBL_ACADEMICYEAR WHERE ISDELETE = 0 AND MAJORID=@MajorId;</value>
   </data>
-  <data name="SelectAllMajor" xml:space="preserve">
-    <value>SELECT * FROM TBL_MAJOR WHERE ISDELETE = 0;</value>
+  <data name="SelectAllMajorByUniversityId" xml:space="preserve">
+    <value>SELECT * FROM TBL_MAJOR WHERE ISDELETE = 0 and UNIVERSITYID=@UniversityId;</value>
   </data>
   <data name="SelectAllStudent" xml:space="preserve">
     <value>SELECT * FROM TBL_STUDENT WHERE ISDELETE = 0;</value>
@@ -165,6 +165,9 @@ VALUES (@STUDENTNO,@NAME,@FATHERNAME,@NRC,@ADDRESS,@PHONE,@EMAIL,@GENDER,@DOB,@U
   </data>
   <data name="SelectMajorById" xml:space="preserve">
     <value>SELECT * FROM [TBL_MAJOR] WHERE ID = @ID AND ISDELETE = 0;</value>
+  </data>
+  <data name="SelectStudentById" xml:space="preserve">
+    <value>SELECT * FROM TBL_STUDENT WHERE ID = @Id;</value>
   </data>
   <data name="SelectStudnetByNRC" xml:space="preserve">
     <value>SELECT * FROM TBL_STUDENT WHERE NRC = @NRC;</value>
